# rust-hmm

./: Cargo.toml
src/: lib.rs
