[package]
name = "rust-hmm"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]

[dependencies]
approx = "*"
bio = { path = "../rust-bio" }
custom_derive = "0.1"
itertools = "0.7"
newtype_derive = "0.1"
ndarray= "0.9"
num-traits = "*"
ordered-float = "0.5"
serde = "1.0"
serde_derive = "1.0"
statrs = "0.9.0"
quick-error = "1.2"
